--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "map",
     "clustering"
   ],
-  "author": "Agustin",
+  "author": "ddrr1337",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ddrr1337/react-native-map-clustering-flex/issues"
